# AI20K_Team7_Food_Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  foodie-agent-architecture.md  guide-get-user-location-feature.md  guide-get-user-preference-feature.md  guide-save-user-selection-feature.md  main.py  member-1-api-layer.md  member-2-agent-core.md  member-3-tools.md  member-4-database.md  member-5-external-services.md  pyproject.toml  requirements.txt  test_self_correction.py
.claude/: settings.local.json
app/: __init__.py  main.py  server.py
app/agent/: __init__.py  graph.py  nodes.py  prompt.py  react_agent.py  runner.py  state.py
app/api/: __init__.py  chat.py  history.py  session.py
app/core/: auth.py  config.py  exceptions.py  guardrail.py  logging.py  provider.py
app/data/: selection_store.json  user_preferences.json
app/db/: connection.py  mock_data.py  models.py  queries.py
app/services/: client.py  geocoding.py  google_places.py  history.py  llm.py  (+1 more)
data/: chat_history.json  selection_store.json  selections.json  sessions.json  user_preferences.json  users.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
huy/: main_test_case1.py  main_test_case2.py  main_test_case3.py  main_test_case4.py  main_test_case5.py  system_prompt.py  users.json  x.ipynb
reports/: REPORT_.md  REPORT_TRINHDACPHU.md  session_sess_1e717e63.md
scripts/: run.bat  run.sh  setup.bat  setup.sh
tests/: conftest.py  test_get_user_preference_tool.py  test_location_service.py  test_location_tool.py
(+33 files in other folders)
