[project]
name = "foodie-agent"
version = "0.1.0"
description = "ReAct-based chatbot for finding restaurants via Google Places API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Foodie Team" }
]
dependencies = [
    "fastapi>=0.111,<0.200",
    "uvicorn[standard]>=0.30,<1.0",
    "langchain>=0.2,<0.4",
    "langgraph>=0.1,<1.0",
    "litellm>=1.40,<2.0",
    "motor>=3.4,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "slowapi>=0.1,<1.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.2,<1.0",
    "black>=24.0,<27.0",
    "mypy>=1.8,<2.0",
    "pre-commit>=3.6,<5.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
